# zhkh_dialog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
bot/: .env.example  __main__.py  config.py  data.py
bot/dialogs/: getter.py  user.py  utils.py  window.py
bot/handlers/: user.py
bot/states/: user.py
config_data/: config.py  main_menu.py
external_services/opencity_api/: base.py  example.json  method.py  model.py
lexicon/: ru.py
