[tool.poetry]
name = "zhkh-dialog"
version = "0.1.0"
description = ""
authors = ["tmutarakan <ratibor.tmutarakansky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram-dialog = "^2.1.0"
environs = "^11.0.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
